# SMART_VOLTAGE_CURRENT

./: CMakeLists.txt  DHT22.c  DHT22.h  README.md  app.css  app.js  app_nvs.c  aws_iot.c  http_server.c  http_server.h  index.html  main.c  sntp_time_sync.h  tasks_common.h  wifi_app.c  wifi_app.h
